<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchAndMatch.Vertical"
    android:background="@color/bg_home"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_common"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_right">
        
        <TextView 
            android:layout_width="80dp"
            android:layout_height="@dimen/found_item_height"
            android:text="旧 密 码"
            android:textColor="@color/text_color_deep_gray"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_2"/>
        
        <EditText 
            android:id="@+id/pwd_edt_inital"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/found_item_height"
            android:hint="输入旧密码"
            android:textColorHint="@color/text_color_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginLeft="@dimen/margin_distance_3"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_1"
            android:textColor="@color/text_color_black"
            android:background="@null"/>
    </LinearLayout>
    <View style="@style/line_style"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_right">
        
        <TextView 
            android:layout_width="80dp"
            android:layout_height="@dimen/found_item_height"
            android:text="@string/new_pwd"
            android:textColor="@color/text_color_deep_gray"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_2"/>
        
        <EditText 
            android:id="@+id/pwd_edt_new"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/found_item_height"
            android:hint="@string/input_new_pwd"
            android:textColorHint="@color/text_color_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginLeft="@dimen/margin_distance_3"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_1"
            android:textColor="@color/text_color_black"
            android:background="@null"/>
    </LinearLayout>
    <View style="@style/line_style"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_right">
        
        <TextView 
            android:layout_width="80dp"
            android:layout_height="@dimen/found_item_height"
            android:text="@string/confirm_pwd"
            android:textColor="@color/text_color_deep_gray"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_2"/>
        
        <EditText 
            android:id="@+id/pwd_edt_confirm"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/found_item_height"
            android:hint="输入确认密码"
            android:textColorHint="@color/text_color_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginLeft="@dimen/margin_distance_3"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_1"
            android:textColor="@color/text_color_black"
            android:background="@null"/>
    </LinearLayout>
    <View style="@style/line_style"/>
    
    <LinearLayout style="@style/MatchAndMatch.Vertical"
        android:gravity="bottom" >

        <Button
            android:id="@+id/pwd_btn_confirm"
            style="@style/CommitButton"
            android:layout_marginLeft="@dimen/common_margin_left"
            android:layout_marginRight="@dimen/common_margin_right"
            android:layout_marginBottom="65dp"
            android:text="@string/save_changes" />
    </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
