<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchAndMatch.Vertical"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_common"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_distance_3"
        android:text="请输入6-18位数字或字母的密码"
        android:textSize="@dimen/text_size_1"
        android:textColor="@color/text_color_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/find_pwd_edt_phone"
            style="@style/edittextStyle2"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/icon_phone"
            android:hint="输入手机号"
             />

        <TextView
            android:id="@+id/find_pwd_btn_security_code"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_distance_2"
            android:gravity="center"
            android:background="@drawable/shape_bg_no_radius_gray"
            android:textColor="@color/text_color_gray"
            android:text="@string/get_security_code"
            android:textSize="@dimen/text_size_2"/>
    </LinearLayout>



    <View style="@style/line_style"
        android:layout_marginLeft="@dimen/margin_distance_3"
        android:layout_marginRight="@dimen/margin_distance_3"/>





    <EditText
        android:id="@+id/find_pwd_edt_code"
        style="@style/edittextStyle2"
        android:hint="输入验证码"
        android:drawableLeft="@drawable/icon_pwd"
        android:layout_marginTop="@dimen/margin_distance_2"/>

    <View style="@style/line_style"
        android:layout_marginLeft="@dimen/margin_distance_3"
        android:layout_marginRight="@dimen/margin_distance_3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_distance_3"
        android:layout_marginRight="@dimen/margin_distance_3"
        android:layout_marginTop="@dimen/margin_distance_3"
        android:text="@string/reset_new_pwd"
        android:textSize="@dimen/text_size_2"
        android:textColor="@color/text_color_little_black"/>

    <EditText
        android:id="@+id/find_pwd_edt_pwd"
        style="@style/edittextStyle2"
        android:layout_marginTop="@dimen/margin_distance_2"
        android:hint="请输入密码"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/icon_pwd"/>

    <View style="@style/line_style"
        android:layout_marginLeft="@dimen/margin_distance_3"
        android:layout_marginRight="@dimen/margin_distance_3"/>
    <EditText
        android:id="@+id/find_pwd_edt_pwd_again"
        style="@style/edittextStyle2"
        android:layout_marginTop="@dimen/margin_distance_2"
        android:drawableLeft="@drawable/icon_pwd"
        android:hint="请确认密码"
        android:inputType="textPassword" />

    <View style="@style/line_style"/>
    <View style="@style/line_style"
        android:layout_marginLeft="@dimen/margin_distance_3"
        android:layout_marginRight="@dimen/margin_distance_3"/>



    <Button
        android:id="@+id/find_pwd_btn_submit"
        style="@style/CommitButton"
        android:layout_marginTop="@dimen/margin_distance_3"
        android:layout_marginLeft="@dimen/margin_distance_3"
        android:layout_marginRight="@dimen/margin_distance_3"
        android:text="@string/confirm" />


</LinearLayout>